ajout des elements html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="icon" href="Asset/Frame 39.png">
+    <link rel="stylesheet" href="main.css/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <img src="Asset/Frame.png" alt="icon-header">
+            <a href="Home">Home</a>
+            <a href="Category">Category</a>
+            <a href="About">About</a>
+            <a href="Contact">Contact</a>
+            <form action="/recherche" method="GET">
+                <input type="search" name="recherche" placeholder="search something here" />
+            </form>
+            <a href="inscription" class="btn-join">Join the community</a>
+            <img src="Asset/Frame 44.png" alt="">
+        </nav>
+    </header>
+    <section>
+        <h1>One More Friend</h1>
+        <h2>Thousands More Fun!</h2>
+        <p> 
+          Having a pet means you have more joy,
+          a new friend, a happy <br> person who will always
+          be with you to have fun. We have 200+ <br> different
+          pets that can meet your needs!
+        </p>
+        <a href="">view Intro</a>
+        <a href="">Explore Now</a>
+        <img src="Asset/035a16de8e1aa9a0522d0cebb4144a5ceda0344a.png"  class="image-dog" alt="dog-and-children">
+    </section>
 </body>
 </html>
