ajout du style de  l'element sous-image-dog

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <a href="">view Intro</a>
         <a href="">Explore Now</a>
         <img src="Asset/035a16de8e1aa9a0522d0cebb4144a5ceda0344a.png"  class="image-dog" alt="dog-and-children">
+        <img src="Asset/Rectangle 2 (1).png" alt="sous-image-dog"class="sous-image-dog">
     </section>
 </body>
 </html>
