ajustement des elements du header et de la section juste en dessous

--- a/index.html
+++ b/index.html
@@ -16,25 +16,35 @@
             <a href="About">About</a>
             <a href="Contact">Contact</a>
             <form action="/recherche" method="GET">
-                <input type="search" name="recherche" placeholder="search something here" />
+                <input type="search" name="recherche" placeholder="search something here" class="search" />
             </form>
             <a href="inscription" class="btn-join">Join the community</a>
-            <img src="Asset/Frame 44.png" alt="">
+            <label for="fruit"></label>
+            <select id="fruit" name="fruit" class="select">
+            <option value="VDN"><img src="Asset/Frame (1).png" alt="Bouton-de-selection">VDN</option>
+            <option value="VPN">VPN</option>
+            <option value="ZDN">ZDN</option>
+            <option value="ADN">ADN</option>
+            <option value="BBM">BBM</option>
+            </select>
         </nav>
+        <section class="premiere">
+            <div class="premiere-div">
+                <h1>One More Friend</h1>
+                <h2>Thousands More Fun!</h2>
+                <p> 
+                Having a pet means you have more joy,
+                a new friend, a happy <br> person who will always
+                be with you to have fun. We have 200+ <br> different
+                pets that can meet your needs!
+                </p>
+                <a href="">view Intro</a>
+                <a href="">Explore Now</a>
+            </div>
+            
+            <img src="Asset/035a16de8e1aa9a0522d0cebb4144a5ceda0344a.png"  class="image-dog" alt="dog-and-children">
+        </section>
     </header>
-    <section>
-        <h1>One More Friend</h1>
-        <h2>Thousands More Fun!</h2>
-        <p> 
-          Having a pet means you have more joy,
-          a new friend, a happy <br> person who will always
-          be with you to have fun. We have 200+ <br> different
-          pets that can meet your needs!
-        </p>
-        <a href="">view Intro</a>
-        <a href="">Explore Now</a>
-        <img src="Asset/035a16de8e1aa9a0522d0cebb4144a5ceda0344a.png"  class="image-dog" alt="dog-and-children">
-        <img src="Asset/Rectangle 2 (1).png" alt="sous-image-dog"class="sous-image-dog">
-    </section>
+    
 </body>
 </html>
