disposition des liens en dessous des sections et disposition de l'image

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
                 be with you to have fun. We have 200+ <br> different
                 pets that can meet your needs!
                 </p>
-                <a href="">view Intro</a>
-                <a href="">Explore Now</a>
+                <div class="lien-premiere">
+                    <a href=""class="intro">view Intro</a>
+                    <a href="" class="view">Explore Now</a>
+                </div>
+                
             </div>
             
             <img src="Asset/035a16de8e1aa9a0522d0cebb4144a5ceda0344a.png"  class="image-dog" alt="dog-and-children">
