ajout et diasposition des images de la  premiere section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,70 @@
             <img src="Asset/035a16de8e1aa9a0522d0cebb4144a5ceda0344a.png"  class="image-dog" alt="dog-and-children">
         </section>
     </header>
+    <main>
+        <section class="premiere-section">
+            <div class="haut-images">
+                 <div>
+                 <p>What New?</p>
+                <h2>Take a look at some of our pets</h2>
+                </div>
+                <div>
+                    <a href="">View More ></a>
+                </div>
+            </div>
+            <div class="ordonnement-images">
+                <div class="images">
+                    <img src="Asset/image-chien1.png" alt="">
+                    <h2>MO231 - Pomeranian White</h2>
+                    <p>Genre: Male . Age:02 months</p>
+                    <h2>6.900.000 VND</h2>
+                </div>
+                  <div class="images">
+                    <img src="Asset/image-chien2.png" alt="">
+                    <h2>MO231 - Pomeranian White</h2>
+                    <p>Genre: Male . Age:02 months</p>
+                    <h2>6.900.000 VND</h2>
+                </div>
+                  <div class="images">
+                    <img src="Asset/image-chien3.png" alt="">
+                    <h2>MO231 - Pomeranian White</h2>
+                    <p>Genre: Male . Age:02 months</p>
+                    <h2>6.900.000 VND</h2>
+                </div>
+                  <div class="images">
+                    <img src="Asset/image-chien4.png" alt="">
+                    <h2>MO231 - Pomeranian White</h2>
+                    <p>Genre: Male . Age:02 months</p>
+                    <h2>6.900.000 VND</h2>
+                </div>
+                  <div class="images">
+                    <img src="Asset/image-chien-5.png" alt="">
+                    <h2>MO231 - Pomeranian White</h2>
+                    <p>Genre: Male . Age:02 months</p>
+                    <h2>6.900.000 VND</h2>
+                </div>
+                  <div class="images">
+                    <img src="Asset/image-chien-6.png" alt="">
+                    <h2>MO231 - Pomeranian White</h2>
+                    <p>Genre: Male . Age:02 months</p>
+                    <h2>6.900.000 VND</h2>
+                </div>
+                  <div class="images">
+                    <img src="Asset/image-chien-7 .png" alt="">
+                    <h2>MO231 - Pomeranian White</h2>
+                    <p>Genre: Male . Age:02 months</p>
+                    <h2>6.900.000 VND</h2>
+                </div>
+                  <div class="images">
+                    <img src="Asset/image-chien-8.png" alt="">
+                    <h2>MO231 - Pomeranian White</h2>
+                    <p>Genre: Male . Age:02 months</p>
+                    <h2>6.900.000 VND</h2>
+                </div>
+            </div>
+            
+        </section>
+    </main>
     
 </body>
 </html>
