mise en place de la baniere2 sous l'images des chiens

--- a/index.html
+++ b/index.html
@@ -109,7 +109,22 @@
                     <h2>6.900.000 VND</h2>
                 </div>
             </div>
-            
+            <div class="sous-image">
+                <div class="couleur1"></div>
+                <div class="couleur2"></div>
+                <div class="couleur3" ></div>
+            </div>
+            <div class="content">
+                <img src="Asset/imagebanniere2.png" alt="Femme avec chien" class="Femme avec chien">
+                <h1>One More Friend<br>Thousands More Fun!</h1>
+                <p>Having a pet means you have more joy, a new friend, a happy person<br>
+                    who will always be with you to have fun. We have 200+ different pets<br>
+                     that can meet your needs!</p>
+                <div class="buttons">
+                    <button>View Intro</button>
+                    <button>Explore Now</button>
+                </div>
+            </div>
         </section>
     </main>
     
